--- a/src/index.css
+++ b/src/index.css
@@ -174,3 +174,14 @@ code {
   background-color: #1e8f52;
 }
 
+@media only screen and (max-width: 600px) {
+}
+
+@media only screen and (min-width: 601px) and (max-width: 900px) {
+
+}
+
+@media only screen and (min-width: 901px) {
+  
+}
+
