--- a/src/components/Puissance4.css
+++ b/src/components/Puissance4.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 400px;
 }
 
 .board {
@@ -30,8 +31,8 @@
 }
 
 .cell {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   background-color: #eee;
   border: 2px solid #444;
   margin: 2px;
@@ -82,13 +83,3 @@
   background-color: #46a3c6;
 }
 
-@media only screen and (max-width: 600px) {
-}
-
-@media only screen and (min-width: 601px) and (max-width: 900px) {
-
-}
-
-@media only screen and (min-width: 901px) {
-  
-}
