--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@ code {
 /* Style général du tableau */
 .board {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   margin: 20px auto;
@@ -138,7 +139,7 @@ code {
 .mode-button {
   background-color: #3498db;
   color: white;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bold;
   padding: 10px 20px;
   margin: 10px;
@@ -174,14 +175,5 @@ code {
   background-color: #1e8f52;
 }
 
-@media only screen and (max-width: 600px) {
-}
 
-@media only screen and (min-width: 601px) and (max-width: 900px) {
-
-}
-
-@media only screen and (min-width: 901px) {
-  
-}
 
